src/style.css
/* ... */
@media screen and (max-width: 800px) {
  h1 {
    font-size: 3.5rem;
  }

  main > nav {
    height: 60px;
  }

  nav > h3 {
    font-size: 1.5rem;
  }

  nav > .links-container {
    gap: 40px;
  }

  nav > .links-container h3 {
    font-size: 1rem;
  }
}

@media screen and (max-width: 600px) {
  main > * {
    margin-left: 25px;
    margin-right: 25px;
  }

  main > nav {
    display: none;
  }

  main > .contact-section {
    padding-left: 25px;
    padding-right: 25px;
  }

  .contact-related-container > h1 {
    margin-top: 25px;
    margin-bottom: 25px;
  }

  h1 {
    font-size: 2rem;
  }

  h2 {
    font-size: 2rem;
  }

  h3 {
    font-size: 1.5rem;
  }

  .project-btns > * {
    font-size: 1.3rem;
    padding: 0.5rem 0.75rem;
  }

  p {
    font-size: initial;
  }

  .about-section .paragraphs-container.after::after {
    font-size: 1.2rem;
    background-position: 50px 2px;
    left: 40%;
  }

  .animated-h2-container {
    margin: 26.56px 0;
  }

  .animated-h2-container > .h2-container {
    height: 40px;
  }

  .project-title {
    margin: 26.56px 0;
  }

  .project-date-container > p {
    font-size: 0.8rem;
  }

  .contact-related-container > .links-container > .link-container {
    gap: 5px;
    padding-left: 10px;
    padding-right: 10px;
  }

  .contact-related-container > .links-container p {
    font-size: 0.7rem;
  }
  .contact-related-container > .links-container svg {
    max-width: 24px;
    max-height: 24px;
  }

  .copied-pop-up-container {
    width: 55px;
    height: 25px;
  }

  .copied-pop-up-container > p {
    font-size: 0.7rem;
  }

  footer {
    margin-top: 10px;
    height: 40px;
  }

  footer > p {
    font-size: 0.5rem;
  }
}

@media screen and (max-aspect-ratio: 17/10) {
  .banner-heading img {
    margin-left: 10%;
  }
}

@media screen and (max-aspect-ratio: 31/20) {
  .banner-heading img {
    margin-left: 25%;
  }
}

@media screen and (max-aspect-ratio: 7/5) {
  .banner-heading img {
    margin-left: 40%;
  }
}
@media screen and (max-aspect-ratio: 31/25) {
  .banner-heading img {
    margin-left: 55%;
  }
}

@media screen and (max-aspect-ratio: 28/25) {
  .banner-heading img {
    max-width: 330vw;
  }
}

